test/good/automatic/base/without_input/ret_zero/0056.lat
// freely chosen place to declare

int a(int n)
{
  int a = 10;
  a++;
  while(a > 5)
    a--;
  int b = 20;
  printInt(b + a);
  int x = 2;
  return b * 10 - a * x ;
}

int main()
{
  a(10);
  return 0;
}
