test/bad/automatic/base/compile_time/0058.lat

int main() {
  int x = 100;
  if (10 > 20 + 20/(x * 0))
    return 2;
  return 0;
}
